# tofu-garnish

./: .gitignore  README.md  action.yml  index.html  manifest.json  pyproject.toml
.github/workflows/: ci.yml  demo.yml
examples/demo/: main.tf
examples/staging/: main.tf
prod/: index.html
src/: garnish.py  generate.sh  publish.js  publish.py
staging/: index.html
tests/: conftest.py  test_garnish.py  test_publish.py
tests/fixtures/: dflook_json_output_path.json  dflook_step_outputs.json  tofu_output_json.json  tofu_show_module.json
