[project]
name = "tofu-garnish"
version = "1.0.0"
description = "Generate a simple static HTML page from Tofu/Terraform outputs and deploy it to GitHub Pages."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
show_missing = true
fail_under = 95

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
# Long lines are embedded CSS/HTML template strings.
"src/garnish.py" = ["E501"]
